[package]
name = "encjson"
version = "0.2.0"
edition = "2024"

[dependencies]
mini-monocypher = "0.1"     # bindings na Monocypher
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
rand = "0.9"
regex = "1"
lazy_static = "1"
thiserror = "2"

