[package]
name = "encjson"
version = "0.4.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
rand = "0.9"
regex = "1"
lazy_static = "1"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10.1" }
blake2 = "0.10"
