[package]
name = "encjson"
version = "0.8.6"
edition = "2024"

[dependencies]
dirs = "6.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
base64 = "0.22"
rand = "0.9"
regex = "1"
lazy_static = "1"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = { version = "0.10.1" }
blake2 = "0.10"
ratatui = "0.30"
crossterm = "0.29"
unicode-width = "0.2"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-input = "0.15"
